fix whitespace container

--- a/styles/style.css
+++ b/styles/style.css
@@ -249,6 +249,7 @@ background-color: #D5F0DE;
 background-color: white;
 position: relative;
  padding: 40px;
+ height: 120px;
 
 }
 
